--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-social-icons": "^5.6.1",
+    "reactstrap": "^9.0.1",
     "social-media-icons-react": "^1.1.10",
     "web-vitals": "^1.0.1"
   },
