--- a/package.json
+++ b/package.json
@@ -8,10 +8,15 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.6.1",
+    "emailjs-com": "^3.2.0",
+    "i18next": "^21.6.0",
+    "i18next-browser-languagedetector": "^6.1.2",
+    "i18next-xhr-backend": "^3.2.2",
     "jquery": "^3.6.0",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.14.3",
     "react-icons": "^4.3.1",
     "react-redux": "^7.2.6",
     "react-router": "^6.0.2",
@@ -20,6 +25,7 @@
     "react-social-icons": "^5.6.1",
     "reactstrap": "^9.0.1",
     "social-media-icons-react": "^1.1.10",
+    "sweetalert2": "^11.3.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
